--- a/clases.html
+++ b/clases.html
@@ -58,7 +58,7 @@
                     <div class="columna-curso">
                     <div class="texto-columna-curso" >
                      <h5>BALLET</h5>
-                     <p>El Ballete es la base de casi todos los estilos de bayle</p>
+                     <p>El Ballete es la base de casi todos los estilos de baile</p>
                     </div>
                     
              
