--- a/nosotros.html
+++ b/nosotros.html
@@ -99,71 +99,69 @@
                     
                       <p class="titulo text-center text-blue">INSTRUCTORES</p>
 
-                      <ul>
-                          <li>
+                          <div class="col-md-3 margen-caja">
                              <div class="contenedorimagen">
                                 <img src="img/profesor_4.jpg">
                               </div>
                               <p class="nombres">RODULFO PRICE</p>
                               <p class="descripcion">Descripción en dos líneas como máximo</p>
-                          </li>
+                          </div>
 
-                          <li>
+                          <div class="col-md-3 margen-caja">
                              <div class="contenedorimagen">
                                 <img src="img/profesor_14.jpg">
                               </div>    
                               <p class="nombres">ADAM PUDNEY</p>
                               <p class="descripcion">Descripción en dos líneas como máximo</p>
-                          </li>
+                          </div>
 
-                          <li>
+                          <div class="col-md-3 margen-caja">
                              <div class="contenedorimagen">
                                 <img src="img/profesor_1.jpg">
                              </div>
                               <p class="nombres">IAN KNOWLES</p>
                               <p class="descripcion">Descripción en dos líneas como máximo</p>
-                          </li>
+                          </div>
 
-                          <li>
+                          <div class="col-md-3 margen-caja">
                              <div class="contenedorimagen">
                                 <img src="img/profesor_10.jpg">
                              </div>
                               <p class="nombres">KALIMBA GIBSON</p>
                               <p class="descripcion">Descripción en dos líneas como máximo</p>
-                          </li>
+                          </div>
 
-                          <li>
+                          <div class="col-md-3 margen-caja">
                               <div class="contenedorimagen">
                                 <img src="img/profesor_11.jpg">
                              </div>
                               <p class="nombres">EMMA NORTHMORE</p>
                               <p class="descripcion">Descripción en dos líneas como máximo</p>
-                          </li>
+                          </div>
 
-                          <li>
+                          <div class="col-md-3 margen-caja">
                               <div class="contenedorimagen">
                                 <img src="img/profesor_12.jpg">
                              </div>
                               <p class="nombres">SAM DAY</p>
                               <p class="descripcion">Descripción en dos líneas como máximo</p>
-                          </li>
+                          </div>
 
-                          <li>
+                          <div class="col-md-3 margen-caja">
                               <div class="contenedorimagen">
                                 <img src="img/profesor_9.jpg">
                              </div>
                               <p class="nombres">KIM MENDEZ</p>
                               <p class="descripcion">Descripción en dos líneas como máximo</p>
-                          </li>
+                          </div>
 
-                          <li>
+                          <div class="col-md-3 margen-caja">
                               <div class="contenedorimagen">
                                 <img src="img/profesor_15.jpg">
                              </div>
                               <p class="nombres">MAGGIE PATERSON</p>
                               <p class="descripcion">Descripción en dos líneas como máximo</p>
-                          </li>
-                      </ul>
+                          </div>
                   </div>  
               </div>
            </div>
