--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
                     <li><a href="nosotros.html" class="text-gray">Nosotros</a></li>
                     <li><a href="clases.html" class="text-gray">Clases</a></li>
                     <li><a href="blog.html" class="text-gray">Blog</a></li>
-                    <li><a href="#contactanos" class="text-gray">Contáctanos</a></li>
+                    <li><a href="#contacto" class="text-gray">Contáctanos</a></li>
                 </ul>
        </div>
 
@@ -113,7 +113,7 @@
 </div>
 </div>
 </div>
- </div>
+
 </div>
   </section>
 <footer>
