--- a/nosotros.html
+++ b/nosotros.html
@@ -42,7 +42,7 @@
                     <li><a href="nosotros.html" class="text-gray">Nosotros</a></li>
                     <li><a href="clases.html" class="text-gray">Clases</a></li>
                     <li><a href="blog.html" class="text-gray">Blog</a></li>
-                    <li><a href="#contactanos" class="text-gray">Contáctanos</a></li>
+                    <li><a href="#contacto" class="text-gray">Contáctanos</a></li>
                 </ul>
                </div>
             </nav>
