--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
     </header>
 
 	<div class="container contenido">
-		<b><center><h2>BLOG</h2></center></b>
+		<b><center><h3>BLOG</h3></center></b>
 		<div class="row fila-blog">
 			<div class="col-md-3 col-xs-12 imagen">
 			<img src="img/blog1.jpg" class="img-responsive" width="300" height="300">
@@ -87,35 +87,37 @@
 	</div>
 
 <section id="contacto"> 
-<div class="container dadmyform">
-<h2 class="title-myform">Contáctanos</h2>
-<div class="form-group myform"> 
-  <div class="row">
-    <div class="col-md-12 col-xs-12">
-  	<div class="input-group">
-  	<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-  	<input  name="first_name" placeholder="Nombre" class="form-control"  type="text">
-  	
-  </div>
-  	<div class="input-group">
-  	<span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-  	<input  name="first_name" placeholder="Email" class="form-control"  type="text">
-  
-  </div>
+          <div class="container">
+            <div class="dadmyform">
+              <h2 class="title-myform">Contáctanos</h2>
+              <div class="form-group myform"> 
+                <div class="row">
+                  <div class="col-md-12 col-xs-12">
+                  <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                  <input  name="first_name" placeholder="Nombre" class="form-control"  type="text">    
+                  </div>
+    
+                  <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                  <input  name="first_name" placeholder="Email" class="form-control"  type="text">
+                </div>
 
-    <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-        	<textarea class="form-control mensaje" name="comment" placeholder="Mensaje"></textarea>
-  </div>
-  <div>
-  	<button class="input-group btn-responsive boton col-md-12 ">ENVIAR</button>
-  </div>
-</div>
-</div>
-</div>
+                  <div class="input-group">
+                      <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                        <textarea class="form-control mensaje" rows="5" name="comment" placeholder="Mensaje"></textarea>
+                </div>
+                <div>
+                  <button class="input-group boton col-md-12 col-xs-12">ENVIAR</button>
+                </div>
+              </div>
+              </div>
+              </div>
+               </div>
+              </div>
 
-</div>
-  </section>
+              </div>
+                </section>
 <footer>
        <div class="container-fluid">
            <div class="margen-pie">
