--- a/clases.html
+++ b/clases.html
@@ -122,36 +122,38 @@
         </section >
         
 
-       <section id="contacto"> 
-<div class="container dadmyform">
-<h2 class="title-myform">Contáctanos</h2>
-<div class="form-group myform"> 
-  <div class="row">
-    <div class="col-md-12 col-xs-12">
-    <div class="input-group">
-    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-    <input  name="first_name" placeholder="Nombre" class="form-control"  type="text">
+      <section id="contacto"> 
+          <div class="container">
+            <div class="dadmyform">
+              <h2 class="title-myform">Contáctanos</h2>
+              <div class="form-group myform"> 
+                <div class="row">
+                  <div class="col-md-12 col-xs-12">
+                  <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                  <input  name="first_name" placeholder="Nombre" class="form-control"  type="text">    
+                  </div>
     
-  </div>
-    <div class="input-group">
-    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-    <input  name="first_name" placeholder="Email" class="form-control"  type="text">
-  
-  </div>
+                  <div class="input-group">
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                  <input  name="first_name" placeholder="Email" class="form-control"  type="text">
+                </div>
 
-    <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-          <textarea class="form-control mensaje" name="comment" placeholder="Mensaje"></textarea>
-  </div>
-  <div>
-    <button class="input-group btn-responsive boton col-md-12 ">ENVIAR</button>
-  </div>
-</div>
-</div>
-</div>
+                  <div class="input-group">
+                      <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                        <textarea class="form-control mensaje" rows="5" name="comment" placeholder="Mensaje"></textarea>
+                </div>
+                <div>
+                  <button class="input-group boton col-md-12 col-xs-12">ENVIAR</button>
+                </div>
+              </div>
+              </div>
+              </div>
+               </div>
+              </div>
 
-</div>
-  </section>
+              </div>
+                </section>
        <footer>
        <div class="container-fluid">
            <div class="margen-pie">
