acomodando el form

--- a/clases.html
+++ b/clases.html
@@ -144,7 +144,7 @@
                         <textarea class="form-control mensaje" rows="5" name="comment" placeholder="Mensaje"></textarea>
                 </div>
                 <div>
-                  <button class="input-group boton col-md-12 col-xs-12">ENVIAR</button>
+                  <button class="input-group boton col-md-12">ENVIAR</button>
                 </div>
               </div>
               </div>
