--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <h2 class="title-myform">Contáctanos</h2>
               <div class="form-group myform"> 
                 <div class="row">
-                  <div class="col-md-12 col-xs-12">
+                  <div class="col-md-12 col-xs-6">
                   <div class="input-group">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                   <input  name="first_name" placeholder="Nombre" class="form-control"  type="text">    
@@ -150,7 +150,7 @@
                         <textarea class="form-control mensaje" rows="5" name="comment" placeholder="Mensaje"></textarea>
                 </div>
                 <div>
-                  <button class="input-group boton col-md-12 col-xs-12">ENVIAR</button>
+                  <button class="input-group boton col-md-12">ENVIAR</button>
                 </div>
               </div>
               </div>
