cambio de tamaño de letra visita en index

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   <div class="margen-contenido-mapa">
                        <div class="col-md-4 texto">
                             <p class="text-gris">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint exercitationem qui tempora, ut veniam officiis incidunt eum voluptate provident accusamus odit doloribus, id debitis eveniet quam libero unde corporis asperiores.</p>
-                            <p class="text-white">Visitanos</p>
+                            <p class="text-white text-visita">Visitanos</p>
                             <p class="text-gris">The Juilliard School<br/>
                             60 Lincoln Center Plaza<br/>
                             New York, NY 10023<br/>
